refactoring requestdto